# on-premise-recommenders

./: .clinerules  .gitignore  README.md  Search & Recommendation System-requirement.md  docker-compose.yml  explain_product_stats.py  explanation-search-ranking-algorithm.ipynb  interactions.parquet  prototype-project-plan.md  prototype-project-plan_.md  pyproject.toml  sample_data.xlsx  stage-6-implementation.md  test-stage1.md  test.ipynb  transactions.parquet  upload-parquets.py  users.parquet
src/on_premise_recommenders.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/onprem_recommenders/: __init__.py  autocomplete.py  cli.py  config.py  db.py  infrastructure.py  main.py  models.py  recommendations.py  tasks.py
src/onprem_recommenders/etl/: __init__.py  autocomplete.py  derived_tables.py  embeddings.py  excel_loader.py  parquet_loader.py  search_index.py
