[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "on-premise-recommenders"
version = "0.1.0"
description = "Proof-of-concept search and recommendation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.5.5",
  "elasticsearch>=8.0.0,<9.0.0",
  "fastapi>=0.135.1",
  "openai>=2.29.0",
  "pandas>=3.0.1",
  "pyarrow>=23.0.1",
  "psycopg[binary]>=3.3.3",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.48",
  "tenacity>=9.1.4",
  "typer>=0.24.1",
  "uvicorn[standard]>=0.42.0",
]

[project.scripts]
recommender-stage1 = "onprem_recommenders.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
